# MPKLink

./: .gitignore  README.md  benchmark.py
benchmark/2024-12-07_17-51-18/: os-pipe.txt  unix-domain-sockets.txt
benchmark/2024-12-07_21-28-28/: os-pipe.txt  shared-memory.txt  unix-domain-sockets.txt
benchmark/2024-12-08_17-19-30/: mpk-thread.txt  os-pipe.txt  shared-memory.txt  unix-domain-sockets.txt
notes/: 11-09-24.md
paper/: paper.tex  sources.bib
pkey_mprotect/src/: lib.rs
services/: base-service1.rs  base-service2.rs  tmp.rs
services/base-services/: request-calculator.rs
services/mpk-thread/: Cargo.toml
services/mpk-thread/src/: main.rs
services/mpk/request-calculator/: Cargo.toml
services/mpk/request-calculator/src/: main.rs
services/mpk/request-manager/: Cargo.toml
services/mpk/request-manager/src/: main.rs
services/os-pipe/request-calculator/: Cargo.toml  Dockerfile
services/os-pipe/request-calculator/src/: main.rs
services/os-pipe/request-manager/: Cargo.toml
services/os-pipe/request-manager/src/: main.rs
services/request-calculator/: Cargo.toml  Dockerfile
services/request-calculator/src/: main.rs
services/request-manager/: Dockerfile
services/request-manager/src/: main.rs
services/shared-memory/: run.sh
services/shared-memory/request-calculator/: Cargo.toml
services/shared-memory/request-manager/: Cargo.toml
services/unix-domain-sockets/request-calculator/: Cargo.toml
services/unix-domain-sockets/request-manager/: Cargo.toml  Dockerfile
tests/: generate_tests.sh  words
(+4 files in other folders)
