[package]
name = "mpk-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27.0", features = ["fs"] }
pkey_mprotect = { path = "../../pkey_mprotect" }
shared_memory = "0.12.4"
libc = "0.2.167"